@@ -32,7 +32,7 @@ import java.util.Properties;
 import java.util.UUID;
 import java.util.Date;
 import java.util.stream.Collectors;
-import java.util.Collections;
+import java.util.Comparator;
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.time.ZoneOffset;
@@ -41,8 +41,6 @@ import java.time.format.FormatStyle;
 import java.net.URLEncoder;
 
 import java.text.MessageFormat;
-
-import java.security.*;
 
 import lombok.extern.slf4j.Slf4j;
 
@@ -78,6 +76,9 @@ import org.sakaiproject.component.cover.ComponentManager;
 import org.sakaiproject.event.api.SessionState;
 import org.sakaiproject.lti.api.LTIExportService;
 import org.sakaiproject.lti.api.LTIService;
+import org.sakaiproject.lti.beans.LtiToolBean;
+import org.sakaiproject.lti.beans.LtiContentBean;
+import org.sakaiproject.lti.beans.LtiToolSiteBean;
 import org.sakaiproject.portal.util.PortalUtils;
 import org.sakaiproject.portal.util.ToolUtils;
 import org.sakaiproject.site.api.ToolConfiguration;
@@ -87,7 +88,6 @@ import org.sakaiproject.tool.api.ToolManager;
 import org.sakaiproject.tool.api.Session;
 import org.sakaiproject.tool.cover.SessionManager;
 import org.sakaiproject.util.ResourceLoader;
-// import org.sakaiproject.lti.impl.DBLTIService; // HACK
 import org.sakaiproject.util.foorm.SakaiFoorm;
 import org.sakaiproject.time.api.UserTimeService;
 
@@ -435,7 +435,7 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		String returnUrl = data.getParameters().getString("returnUrl");
 		// if ( returnUrl != null ) state.setAttribute(STATE_REDIRECT_URL, returnUrl);
 		context.put("ltiService", ltiService);
-		context.put("isAdmin", new Boolean(ltiService.isAdmin(getSiteId(state))));
+		context.put("isAdmin", Boolean.valueOf(ltiService.isAdmin(getSiteId(state))));
 		context.put("allowMaintainerAddToolSite", serverConfigurationService.getBoolean(ALLOW_MAINTAINER_ADD_TOOL_SITE, true));
 		context.put("getContext", toolManager.getCurrentPlacement().getContext());
 		context.put("doEndHelper", BUTTON + "doEndHelper");
@@ -488,63 +488,72 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		context.put(ATTR_LAST_SORTED_FIELD, state.getAttribute(ATTR_LAST_SORTED_FIELD));
 		context.put(ATTR_ASCENDING_ORDER, state.getAttribute(ATTR_ASCENDING_ORDER));
 
-		// this is for the "site tools" panel
-		List<Map<String, Object>> contents = new ArrayList<Map<String, Object>>();
+		// this is for the "site tools" panel - using Beans directly for better performance and type safety
+		List<LtiContentBean> contentBeans = new ArrayList<>();
 		if (count_contents > 0) {
 			Map<String, String> siteURLMap = new HashMap<String, String>(); //cache for site URL
-			contents = (List<Map<String, Object>>) ltiService.getContents(search, order, index, lastIndex, getSiteId(state));
-			for (Map<String, Object> content : contents) {
-
-				Long tool_id_long = null;
-				try {
-					tool_id_long = new Long(content.get(LTIService.LTI_TOOL_ID).toString());
-				} catch (Exception e) {
-					// log the error
-					log.error("error parsing tool id {}", content.get(LTIService.LTI_TOOL_ID));
-				}
-				content.put("tool_id_long", tool_id_long);
-				String plstr = (String) content.get(LTIService.LTI_PLACEMENT);
+			contentBeans = ltiService.getContentsAsBeans(search, order, index, lastIndex, getSiteId(state));
+			
+			// Create maps for additional properties indexed by content ID
+			Map<Long, String> toolUrlMap = new HashMap<>();
+			Map<Long, String> siteUrlMap = new HashMap<>();
+			Map<Long, String> formattedDateMap = new HashMap<>();
+			
+			for (LtiContentBean contentBean : contentBeans) {
+				Long contentId = contentBean.getId();
+				
+				// Validate placement
+				String plstr = contentBean.getPlacement();
 				ToolConfiguration tool = SiteService.findTool(plstr);
 				if (tool == null) {
-					content.put(LTIService.LTI_PLACEMENT, null);
+					// TODO: Review this closely
+					// Note: Invalid placement detected - tool configuration not found
+					// The setPlacement() method already exists in LtiContentBean (via Lombok)
+					// but we're just validating here, not fixing invalid placements
 				}
 
-				//get site url based on site id
-				String siteId = (String) content.get(LTIService.LTI_SITE_ID);
+				// Get site URL based on site ID
+				String siteId = contentBean.getSiteId();
 				try {
-					//look for it in the cache
+					// Look for it in the cache
 					String url = siteURLMap.get(siteId);
 					if (url == null) {
 						url = SiteService.getSite(siteId).getUrl();
 						siteURLMap.put(siteId, url);
 					}
-					content.put("site_url", url);
+					siteUrlMap.put(contentId, url);
 				} catch (Exception e) {
-					log.error("error getting url for site {}", siteId);
+					log.error("Error getting URL for site: {}", siteId);
 				}
 
-				// Patch the date type
-				// https://stackoverflow.com/questions/19431234/converting-between-java-time-localdatetime-and-java-util-date
-				Object created_at = content.get("created_at");
-				if ( created_at instanceof Date ) {
-					String output = userTimeService.dateTimeFormat(((Date) created_at), rb.getLocale(), java.text.DateFormat.MEDIUM);
-					content.put("created_at", output);
-				} else if ( created_at instanceof LocalDateTime) {
+				// Format the date for display
+				Object created_at = contentBean.getCreatedAt();
+				String formattedDate = null;
+				if (created_at instanceof Date) {
+					formattedDate = userTimeService.dateTimeFormat(((Date) created_at), rb.getLocale(), java.text.DateFormat.MEDIUM);
+				} else if (created_at instanceof LocalDateTime) {
 					LocalDateTime ldt = (LocalDateTime) created_at;
-					// Foorm stores these as UTC
+					// Form stores these as UTC
 					Instant ldtInstant = ldt.toInstant(ZoneOffset.UTC);
-					String output = userTimeService.dateTimeFormat(ldtInstant, FormatStyle.MEDIUM, FormatStyle.SHORT);
-					content.put("created_at", output);
+					formattedDate = userTimeService.dateTimeFormat(ldtInstant, FormatStyle.MEDIUM, FormatStyle.SHORT);
 				} else {
-					String output = created_at.toString();
-					content.put("created_at", output);
+					formattedDate = created_at.toString();
 				}
+				formattedDateMap.put(contentId, formattedDate);
 
-				//get LTI url based on site id and tool id
-				content.put("tool_url", LTIService.LAUNCH_PREFIX + siteId + "/content:" + content.get(LTIService.LTI_ID));
+				// Get LTI URL based on site ID and tool ID
+				String toolUrl = LTIService.LAUNCH_PREFIX + siteId + "/content:" + contentBean.getId();
+				toolUrlMap.put(contentId, toolUrl);
 			}
+			
+			// Add maps to context for template access
+			context.put("toolUrlMap", toolUrlMap);
+			context.put("siteUrlMap", siteUrlMap);
+			context.put("formattedDateMap", formattedDateMap);
 		}
-		context.put("contents", contents);
+		
+		// Pass Beans directly to template - much more efficient!
+		context.put("contents", contentBeans);
 		context.put("messageSuccess", state.getAttribute(STATE_SUCCESS));
 		state.removeAttribute(STATE_SUCCESS);
 
@@ -584,7 +593,7 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		String returnUrl = data.getParameters().getString("returnUrl");
 		// if ( returnUrl != null ) state.setAttribute(STATE_REDIRECT_URL, returnUrl);
 		context.put("ltiService", ltiService);
-		context.put("isAdmin", new Boolean(ltiService.isAdmin(getSiteId(state))));
+		context.put("isAdmin", Boolean.valueOf(ltiService.isAdmin(getSiteId(state))));
 		context.put("doEndHelper", BUTTON + "doEndHelper");
 		if (ltiService.isAdmin(getSiteId(state))
 				&& serverConfigurationService.getString(SakaiLTIUtil.LTI_ENCRYPTION_KEY, null) == null) {
@@ -592,29 +601,42 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		}
 
 		context.put("messageSuccess", state.getAttribute(STATE_SUCCESS));
-		context.put("isAdmin", new Boolean(ltiService.isAdmin(getSiteId(state))));
-		context.put("allowMaintainerAddSystemTool", new Boolean(serverConfigurationService.getBoolean(ALLOW_MAINTAINER_ADD_SYSTEM_TOOL, true)));
+		context.put("isAdmin", Boolean.valueOf(ltiService.isAdmin(getSiteId(state))));
+		context.put("allowMaintainerAddSystemTool", Boolean.valueOf(serverConfigurationService.getBoolean(ALLOW_MAINTAINER_ADD_SYSTEM_TOOL, true)));
 		context.put("getContext", contextString);
 
 		state.removeAttribute(STATE_SUCCESS);
 		state.removeAttribute(STATE_POST);
 
-		// this is for the system tool panel
-		List<Map<String, Object>> tools = ltiService.getTools(null, null, 0, 0, getSiteId(state));
-		for (Map<String, Object> tool : tools) {
-			String privacyUrl = LTIService.LAUNCH_PREFIX + getSiteId(state) + "/tool:" + tool.get(LTIService.LTI_ID)+"?"+
+		// this is for the system tool panel - using Beans directly for better performance and type safety
+		List<LtiToolBean> toolBeans = ltiService.getToolsAsBeans(null, null, 0, 0, getSiteId(state));
+		
+		// Create map for additional tool properties indexed by tool ID
+		Map<Long, Map<String, Object>> toolPropsMap = new HashMap<>();
+		
+		for (LtiToolBean toolBean : toolBeans) {
+			Long toolId = toolBean.getId();
+			String privacyUrl = LTIService.LAUNCH_PREFIX + getSiteId(state) + "/tool:" + toolId + "?" +
 					SakaiLTIUtil.MESSAGE_TYPE_PARAMETER + "=" + SakaiLTIUtil.MESSAGE_TYPE_PARAMETER_PRIVACY;
-			tool.put("privacy_url", privacyUrl);
-		}
-
-		context.put("ltiTools", tools);
-
-		for (Map<String, Object> tool : tools) {
-			if (StringUtils.isBlank((String) tool.get(LTIService.LTI_SITE_ID))) {
-				List<Map<String, Object>> toolSites = ltiService.getToolSitesByToolId(String.valueOf(tool.get(LTIService.LTI_ID)), getSiteId(state));
-				tool.put("lti_count_deployment", toolSites.size());
+			
+			// Create properties map for this tool
+			Map<String, Object> additionalProps = new HashMap<>();
+			additionalProps.put("privacy_url", privacyUrl);
+			
+			// Add deployment count for system tools
+			if (StringUtils.isBlank(toolBean.getSiteId())) {
+				List<LtiToolSiteBean> toolSiteBeans = ltiService.getToolSitesByToolIdAsBeans(String.valueOf(toolId), getSiteId(state));
+				additionalProps.put("lti_count_deployment", toolSiteBeans.size());
 			}
+			
+			toolPropsMap.put(toolId, additionalProps);
 		}
+		
+		// Add tool properties map to context
+		context.put("toolPropsMap", toolPropsMap);
+
+		// Pass Beans directly to template - much more efficient!
+		context.put("ltiTools", toolBeans);
 
 		// top navigation menu
 		Menu menu = new MenuImpl(portlet, data, "LTIAdminTool");
@@ -654,22 +676,21 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			addAlert(state, rb.getString("error.id.not.found"));
 			return "lti_error";
 		}
-		Long key = new Long(id);
-		Map<String, Object> tool = ltiService.getTool(key, getSiteId(state));
-		if (tool == null) {
+		Long key = Long.valueOf(id);
+		LtiToolBean toolBean = ltiService.getToolAsBean(key, getSiteId(state));
+		if (toolBean == null) {
 			return "lti_error";
 		}
-
-		context.put("clientId", tool.get(LTIService.LTI13_CLIENT_ID));
+		context.put("clientId", toolBean.getLti13ClientId());
 
 		String keySetUrl = SakaiLTIUtil.getOurServerUrl() + "/imsblis/lti13/keyset";
 		context.put("keySetUrl", keySetUrl);
-		String tokenUrl = SakaiLTIUtil.getOurServerUrl() + "/imsblis/lti13/token/" + tool.get(LTIService.LTI_ID);
+		String tokenUrl = SakaiLTIUtil.getOurServerUrl() + "/imsblis/lti13/token/" + toolBean.getId();
 		context.put("tokenUrl", tokenUrl);
 		String authOIDC = SakaiLTIUtil.getOurServerUrl() + "/imsoidc/lti13/oidc_auth";
 		context.put("authOIDC", authOIDC);
 
-		String site_id = (String) tool.get(LTIService.LTI_SITE_ID);
+		String site_id = toolBean.getSiteId();
 		String issuerURL = SakaiLTIUtil.getIssuer(site_id);
 		context.put("issuerURL", issuerURL);
 
@@ -677,8 +698,8 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		context.put("deploymentId", deploymentId);
 
 		String configUrl = SakaiLTIUtil.getOurServerUrl() + "/imsblis/lti13/sakai_config";
-		configUrl += "?key=" + URLEncoder.encode(tool.get(LTIService.LTI_ID).toString());
-		configUrl += "&clientId=" + URLEncoder.encode(tool.get(LTIService.LTI13_CLIENT_ID).toString());
+		configUrl += "?key=" + URLEncoder.encode(toolBean.getId().toString());
+		configUrl += "&clientId=" + URLEncoder.encode(toolBean.getLti13ClientId());
 		configUrl += "&issuerURL=" + URLEncoder.encode(issuerURL);
 		configUrl += "&deploymentId=" + URLEncoder.encode(deploymentId);
 		context.put("configUrl", configUrl);
@@ -706,20 +727,25 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			addAlert(state, rb.getString("error.id.not.found"));
 			return "lti_error";
 		}
-		Long key = new Long(id);
-		Map<String, Object> tool = ltiService.getTool(key, getSiteId(state));
-		if (tool == null) {
+		Long key = Long.valueOf(id);
+		LtiToolBean toolBean = ltiService.getToolAsBean(key, getSiteId(state));
+		if (toolBean == null) {
 			return "lti_error";
 		}
 
-		Long launchType = LTIUtil.toLongNull( (Integer) tool.get(LTIService.LTI13) );
+		Long launchType = LTIUtil.toLongNull(toolBean.getLti13());
 		context.put("launchType", launchType);
 		context.put("isAdmin", ltiService.isAdmin(getSiteId(state)) ? Boolean.TRUE : Boolean.FALSE);
 
-		tool.put(LTIService.LTI_SECRET, LTIService.SECRET_HIDDEN);
-		tool.put(LTIService.LTI_CONSUMERKEY, LTIService.SECRET_HIDDEN);
+		// Hide sensitive fields in the Bean before form generation
+		toolBean.setSecret(LTIService.SECRET_HIDDEN);
+		toolBean.setConsumerkey(LTIService.SECRET_HIDDEN);
 
-		String formOutput = ltiService.formOutput(tool, mappingForm);
+		// Make sure this is ready to handle LTI 1.3 launches
+		minimalLTI13(toolBean);
+
+		String formOutput = ltiService.formOutput(toolBean, mappingForm);
+
 		context.put("formOutput", formOutput);
 
 		state.removeAttribute(STATE_SUCCESS);
@@ -793,6 +819,57 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		return retval;
 	}
 
+	// Bean version of minimalLTI13 - Make sure this is ready to handle LTI 1.3 launches
+	private boolean minimalLTI13(org.sakaiproject.lti.beans.LtiToolBean toolBean) {
+		boolean retval = false;
+
+		Long tool_id = toolBean.id;
+		String site_id = toolBean.siteId;
+
+		String clientId = StringUtils.trimToNull(toolBean.lti13ClientId);
+		if (clientId == null ) {
+			clientId = UUID.randomUUID().toString();
+			toolBean.lti13ClientId = clientId;
+			retval = true;
+		}
+
+		String keyset = StringUtils.trimToNull(toolBean.lti13LmsKeyset);
+		if (keyset == null ) {
+			keyset = SakaiLTIUtil.getOurServerUrl() + "/imsblis/lti13/keyset";
+			toolBean.lti13LmsKeyset = keyset;
+			retval = true;
+		}
+
+		String endpoint = StringUtils.trimToNull(toolBean.lti13LmsEndpoint);
+		if (endpoint == null ) {
+			endpoint = SakaiLTIUtil.getOurServerUrl() + "/imsoidc/lti13/oidc_auth";
+			toolBean.lti13LmsEndpoint = endpoint;
+			retval = true;
+		}
+
+		String tokenurl = StringUtils.trimToNull(toolBean.lti13LmsToken);
+		if (tokenurl == null && tool_id != null ) {
+			tokenurl = SakaiLTIUtil.getOurServerUrl() + "/imsblis/lti13/token/" + tool_id;
+			toolBean.lti13LmsToken = tokenurl;
+		}
+
+		String deployment_id = StringUtils.trimToNull(toolBean.lti13LmsDeploymentId);
+		if ( deployment_id == null ) {
+			deployment_id = SakaiLTIUtil.getDeploymentId(site_id);
+			toolBean.lti13LmsDeploymentId = deployment_id;
+			retval = true;
+		}
+
+		String issuer = StringUtils.trimToNull(toolBean.lti13LmsIssuer);
+		if ( issuer == null ) {
+			issuer = SakaiLTIUtil.getIssuer(site_id);
+			toolBean.lti13LmsIssuer = issuer;
+			retval = true;
+		}
+
+		return retval;
+	}
+
 	// Make a tool with a title and sent to tool_insert (update) to dynamic register
 	public void doAutoInsert(RunData data, Context context)
 	{
@@ -828,7 +905,7 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			return;
 		}
 
-		Long key = new Long(retval.toString());
+		Long key = Long.valueOf(retval.toString());
 
 		String newPanel = "ToolEdit&autoStart=true&id=" + key;
 		switchPanel(state, newPanel);
@@ -851,9 +928,9 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			addAlert(state, rb.getString("error.id.not.found"));
 			return "lti_error";
 		}
-		Long key = new Long(id);
-		Map<String, Object> tool = ltiService.getTool(key, getSiteId(state));
-		if (tool == null) {
+		Long key = Long.valueOf(id);
+		LtiToolBean toolBean = ltiService.getToolAsBean(key, getSiteId(state));
+		if (toolBean == null) {
 			return "lti_error";
 		}
 
@@ -880,30 +957,30 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			return;
 		}
 
-		Map<String, Object> tool = ltiService.getTool(toolKey, getSiteId(state));
-		if (tool == null) {
+		LtiToolBean toolBean = ltiService.getToolAsBean(toolKey, getSiteId(state));
+		if (toolBean == null) {
 			addAlert(state, rb.getString("error.tool.not.found"));
 			switchPanel(state, "Error");
 			return;
 		}
 
 		// Make sure this is ready to handle LTI 1.3 launches
-		boolean changed = minimalLTI13(tool);
+		boolean changed = minimalLTI13(toolBean);
 
 		// Construct and time-stamp the one-time registration token and store it
 		String registration_token = LTI13Util.timeStamp(UUID.randomUUID().toString());
-		tool.put(LTIService.LTI13_AUTO_TOKEN, registration_token);
+		toolBean.lti13AutoToken = registration_token;
 
 		// Update the tool
-		Object retval = ltiService.updateTool(toolKey, tool, getSiteId(state));
+		Object retval = ltiService.updateTool(toolKey, toolBean, getSiteId(state));
 		if (retval instanceof String) {
 			addAlert(state, (String) retval);
 			switchPanel(state, "Error");
 			return;
 		}
 
-		String site_id = (String) tool.get(LTIService.LTI_SITE_ID);
-		String clientId = (String) tool.get(LTIService.LTI13_CLIENT_ID);
+		String site_id = toolBean.siteId;
+		String clientId = toolBean.lti13ClientId;
 		String issuerURL = SakaiLTIUtil.getIssuer(site_id);
 		String deploymentId = SakaiLTIUtil.getDeploymentId(site_id);
 
@@ -941,24 +1018,24 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			addAlert(state, rb.getString("error.id.not.found"));
 			return "lti_error";
 		}
-		Long key = new Long(id);
+		Long key = Long.valueOf(id);
 
 		// Retrieve the tool using a WHERE clause so the counts get computed
-		List<Map<String, Object>> tools = ltiService.getTools("lti_tools.id = " + key, null, 0, 0, getSiteId(state));
-		if (tools == null || tools.size() < 1) {
+		List<LtiToolBean> toolBeans = ltiService.getToolsAsBeans("lti_tools.id = " + key, null, 0, 0, getSiteId(state));
+		if (toolBeans == null || toolBeans.size() < 1) {
 			addAlert(state, rb.getString("error.tool.not.found"));
 			return "lti_error";
 		}
 
-		Map<String, Object> tool = tools.get(0);
-		String formOutput = ltiService.formOutput(tool, mappingForm);
+		LtiToolBean toolBean = toolBeans.get(0);
+		String formOutput = ltiService.formOutput(toolBean, mappingForm);
 		context.put("formOutput", formOutput);
-		context.put("tool", tool);
-		context.put("tool_count", tool.get("lti_content_count"));
-		context.put("tool_unique_site_count", tool.get("lti_site_count"));
+		context.put("tool", toolBean);
+		context.put("tool_count", toolBean.getLtiContentCount());
+		context.put("tool_unique_site_count", toolBean.getLtiSiteCount());
 
-		List<Map<String, Object>> toolSites = ltiService.getToolSitesByToolId(id, getSiteId(state));
-		context.put("tool_site_count", toolSites.size());
+		List<LtiToolSiteBean> toolSiteBeans = ltiService.getToolSitesByToolIdAsBeans(id, getSiteId(state));
+		context.put("tool_site_count", toolSiteBeans.size());
 
 		context.put("isAdmin", ltiService.isAdmin(getSiteId(state)));
 
@@ -983,7 +1060,7 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			switchPanel(state, "ToolSystem");
 			return;
 		}
-		Long key = new Long(id);
+		Long key = Long.valueOf(id);
 
 		// Delete the tool and all dependencies
 		List<String> errors = ltiService.deleteToolAndDependencies(key, getSiteId(state));
@@ -1022,18 +1099,18 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		}
 		context.put("toolId", tool_id);
 
-		Map<String, Object> tool = ltiService.getTool(Long.valueOf(tool_id), getSiteId(state));
-		if (tool == null) {
+		LtiToolBean toolBean = ltiService.getToolAsBean(Long.valueOf(tool_id), getSiteId(state));
+		if (toolBean == null) {
 			return "lti_error";
 		}
-		context.put("tool", tool);
+		context.put("tool", toolBean);
 
 		String[] mappingForm = foorm.filterForm(ltiService.getToolModel(getSiteId(state)), "^title:.*|^launch:.*", null);
-		String formOutput = ltiService.formOutput(tool, mappingForm);
+		String formOutput = ltiService.formOutput(toolBean, mappingForm);
 		context.put("formOutput", formOutput);
 
-		List<Map<String, Object>> ltiToolSites = ltiService.getToolSitesByToolId(tool_id, getSiteId(state));
-		context.put("ltiToolSites", ltiToolSites);
+		List<LtiToolSiteBean> ltiToolSiteBeans = ltiService.getToolSitesByToolIdAsBeans(tool_id, getSiteId(state));
+		context.put("ltiToolSites", ltiToolSiteBeans);
 
 		context.put("messageSuccess", state.getAttribute(STATE_SUCCESS));
 		state.removeAttribute(STATE_SUCCESS);
@@ -1117,16 +1194,16 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		}
 
 		// Get toolSites from the database
-		List<Map<String, Object>> toolSites = ltiService.getToolSitesByToolId(toolId, getSiteId(state));
-		if (toolSites == null) {
+		List<LtiToolSiteBean> toolSiteBeans = ltiService.getToolSitesByToolIdAsBeans(toolId, getSiteId(state));
+		if (toolSiteBeans == null) {
 			addAlert(state, rb.getString("error.tool.not.found"));
 			switchPanel(state, "Error");
 			return;
 		}
 
 		// Check if the tool has already been deployed to one of the input sites.
-		Set<String> associatedSiteIds = toolSites.stream()
-				.map(row -> (String) row.get(LTIService.LTI_SITE_ID))
+		Set<String> associatedSiteIds = toolSiteBeans.stream()
+				.map(LtiToolSiteBean::getSiteId)
 				.collect(Collectors.toSet());
 
 		List<String> deployedSiteIds = uniqueInputSiteIds.stream()
@@ -1191,28 +1268,28 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		}
 		context.put("id", id);
 
-		Map<String, Object> toolSite = ltiService.getToolSiteById(Long.valueOf(id), getSiteId(state));
-		if (toolSite == null) {
+		LtiToolSiteBean toolSiteBean = ltiService.getToolSiteAsBean(Long.valueOf(id), getSiteId(state));
+		if (toolSiteBean == null) {
 			addAlert(state, rb.getString("error.id.not.found"));
 			return "lti_error";
 		}
 
-		String toolId = String.valueOf(toolSite.get(LTIService.LTI_TOOL_ID));
+		String toolId = String.valueOf(toolSiteBean.getToolId());
 		context.put("toolId", toolId);
 
 		// Display tool attributes (Read-only)
-		Map<String, Object> tool = ltiService.getTool(Long.valueOf(toolId), getSiteId(state));
+		LtiToolBean toolBean = ltiService.getToolAsBean(Long.valueOf(toolId), getSiteId(state));
 		String[] mappingFormOutput = foorm.filterForm(ltiService.getToolModel(getSiteId(state)), "^title:.*|^launch:.*", null);
-		String formOutput = ltiService.formOutput(tool, mappingFormOutput);
+		String formOutput = ltiService.formOutput(toolBean, mappingFormOutput);
 
 		// Display siteId attribute (Read-only)
 		String[] mappingFormOutput2 = foorm.filterForm(ltiService.getToolSiteModel(getSiteId(state)), "^SITE_ID:.*", null);
-		String formOutput2 = ltiService.formOutput(toolSite, mappingFormOutput2);
+		String formOutput2 = ltiService.formOutput(toolSiteBean, mappingFormOutput2);
 		formOutput += formOutput2;
 		context.put("formOutput", formOutput);
 
 		String[] mappingFormInput = foorm.filterForm(ltiService.getToolSiteModel(getSiteId(state)), null, "^SITE_ID:.*");
-		String formInput = ltiService.formInput(toolSite, mappingFormInput);
+		String formInput = ltiService.formInput(toolSiteBean, mappingFormInput);
 		context.put("formInput", formInput);
 
 		context.put("isAdmin", ltiService.isAdmin(getSiteId(state)));
@@ -1277,24 +1354,24 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			return "lti_error";
 		}
 
-		Map<String, Object> toolSite = ltiService.getToolSiteById(Long.valueOf(id), getSiteId(state));
-		if (toolSite == null) {
+		LtiToolSiteBean toolSiteBean = ltiService.getToolSiteAsBean(Long.valueOf(id), getSiteId(state));
+		if (toolSiteBean == null) {
 			addAlert(state, rb.getString("error.id.not.found"));
 			return "lti_error";
 		}
 
-		context.put("toolSite", toolSite);
+		context.put("toolSite", toolSiteBean);
 
-		String toolId = String.valueOf(toolSite.get(LTIService.LTI_TOOL_ID));
+		String toolId = String.valueOf(toolSiteBean.getToolId());
 
 		// Display tool attributes (Read-only)
-		Map<String, Object> tool = ltiService.getTool(Long.valueOf(toolId), getSiteId(state));
+		LtiToolBean toolBean = ltiService.getToolAsBean(Long.valueOf(toolId), getSiteId(state));
 		String[] mappingFormOutput = foorm.filterForm(ltiService.getToolModel(getSiteId(state)), "^title:.*|^launch:.*", null);
-		String formOutput = ltiService.formOutput(tool, mappingFormOutput);
+		String formOutput = ltiService.formOutput(toolBean, mappingFormOutput);
 
 		// Display toolSite attributes (Read-only)
 		String[] mappingFormOutput2 = foorm.filterForm(ltiService.getToolSiteModel(getSiteId(state)), "^SITE_ID:.*|^notes:.*", null);
-		String formOutput2 = ltiService.formOutput(toolSite, mappingFormOutput2);
+		String formOutput2 = ltiService.formOutput(toolSiteBean, mappingFormOutput2);
 		formOutput += formOutput2;
 		context.put("formOutput", formOutput);
 
@@ -1352,26 +1429,27 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			addAlert(state, rb.getString("error.id.not.found"));
 			return "lti_main";
 		}
-		Long key = new Long(id);
+		Long key = Long.valueOf(id);
 
 		// Retrieve the tool using a WHERE clause so the counts get computed
-		List<Map<String, Object>> tools = ltiService.getTools("lti_tools.id = " + key, null, 0, 0, getSiteId(state));
-		if (tools == null || tools.size() < 1) {
+		List<LtiToolBean> toolBeans = ltiService.getToolsAsBeans("lti_tools.id = " + key, null, 0, 0, getSiteId(state));
+		if (toolBeans == null || toolBeans.size() < 1) {
 			addAlert(state, rb.getString("error.tool.not.found"));
 			return "lti_main";
 		}
 
-		Map<String, Object> tool = tools.get(0);
-		String formOutput = ltiService.formOutput(tool, mappingForm);
+		LtiToolBean toolBean = toolBeans.get(0);
+		String formOutput = ltiService.formOutput(toolBean, mappingForm);
 		context.put("formOutput", formOutput);
-		context.put("tool", tool);
+		context.put("toolBean", toolBean);  // Pass Bean directly for template access
+		context.put("tool", toolBean.asMap());  // Keep Map for template compatibility
 		context.put("tool_id", key);
-		context.put("tool_count", tool.get("lti_content_count"));
-		context.put("tool_unique_site_count", tool.get("lti_site_count"));
+		context.put("tool_count", toolBean.getLtiContentCount());
+		context.put("tool_unique_site_count", toolBean.getLtiSiteCount());
 
 		String contextString = toolManager.getCurrentPlacement().getContext();
-		List<Map<String, Object>> systemTools = getAvailableTools (getSiteId(state), contextString);
-		context.put("tools", systemTools);
+		List<LtiToolBean> systemToolBeans = getAvailableToolsAsBeans(getSiteId(state), contextString);
+		context.put("tools", systemToolBeans);
 
 		state.removeAttribute(STATE_SUCCESS);
 		return "lti_tool_transfer";
@@ -1400,8 +1478,8 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			switchPanel(state, "ToolSystem");
 			return;
 		}
-		Long key = new Long(id);
-		Long new_key = new Long(new_tool_id);
+		Long key = Long.valueOf(id);
+		Long new_key = Long.valueOf(new_tool_id);
 
 		Object retval = ltiService.transferToolContentLinks(key, new_key, getSiteId(state));
 		if ( retval instanceof String ) {
@@ -1519,27 +1597,27 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		}
 		context.put("toolId", id);
 
-		Map<String, Object> tool = ltiService.getTool(Long.valueOf(id), getSiteId(state));
-		if (tool == null) {
+		LtiToolBean toolBean = ltiService.getToolAsBean(Long.valueOf(id), getSiteId(state));
+		if (toolBean == null) {
 			addAlert(state, rb.getString("error.tool.not.found"));
 			return "lti_error";
 		}
 
 		// Hide the old tool secret unless it is incomplete
-		if (!LTIService.LTI_SECRET_INCOMPLETE.equals(tool.get(LTIService.LTI_SECRET))) {
-			tool.put(LTIService.LTI_SECRET, LTIService.SECRET_HIDDEN);
+		if (!LTIService.LTI_SECRET_INCOMPLETE.equals(toolBean.secret)) {
+			toolBean.secret = LTIService.SECRET_HIDDEN;
 		}
 
 		// Set this up in case it becomes LTI 1.3
-		minimalLTI13(tool);
+		minimalLTI13(toolBean);
 
-		String siteId = (String) tool.get(LTIService.LTI_SITE_ID);
+		String siteId = toolBean.siteId;
 		context.put("issuerURL", SakaiLTIUtil.getIssuer(siteId));
 
 		// If siteId is not blank, there is no option for visibility since the tool is always be visible in the site; otherwise, the tool can be visible or stealth
 		String excludePattern = StringUtils.isNotEmpty(siteId) ? "^visible:.*" : "^SITE_ID:.*";
 		String[] mappingForm = foorm.filterForm(ltiService.getToolModel(getSiteId(state)), null, excludePattern);
-		String formInput = ltiService.formInput(tool, mappingForm);
+		String formInput = ltiService.formInput(toolBean, mappingForm);
 		context.put("formInput", formInput);
 
 		context.put("isAdmin", ltiService.isAdmin(getSiteId(state)));
@@ -1548,17 +1626,17 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		Placement placement = toolManager.getCurrentPlacement();
 		String autoStartUrl = serverConfigurationService.getToolUrl() + "/" + placement.getId()
 				+ "?panel=AutoStart"
-				+ "&id=" + tool.get(LTIService.LTI_ID);
+				+ "&id=" + toolBean.id;
 		context.put("autoStartUrl", autoStartUrl);
 
-		String autoRegistrationUrl = SakaiLTIUtil.getOurServerUrl() + "/imsblis/lti13/get_registration?key="+tool.get(LTIService.LTI_ID);
+		String autoRegistrationUrl = SakaiLTIUtil.getOurServerUrl() + "/imsblis/lti13/get_registration?key="+toolBean.id;
 		context.put("autoRegistrationUrl", autoRegistrationUrl);
 
 		// Tool Deployment
 		context.put("canDeploy", ltiService.isAdmin(getSiteId(state)) && StringUtils.isEmpty(siteId));
 		String deployUrl = serverConfigurationService.getToolUrl() + "/" + placement.getId()
 				+ "?panel=ToolSiteDeploy"
-				+ "&tool_id=" + tool.get(LTIService.LTI_ID);
+				+ "&tool_id=" + toolBean.id;
 		context.put("deployUrl", deployUrl);
 
 		context.put("doToolAction", BUTTON + "doToolEdit");
@@ -1637,17 +1715,24 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			addAlert(state, rb.getString("error.maintain.view"));
 			return "lti_error";
 		}
-		List<Map<String, Object>> contents = ltiService.getContents(null, null, 0, 5000, getSiteId(state));
-		for (Map<String, Object> content : contents) {
-			String plstr = (String) content.get(LTIService.LTI_PLACEMENT);
+		List<LtiContentBean> contentBeans = ltiService.getContentsAsBeans(null, null, 0, 5000, getSiteId(state));
+		
+		// Validate placement for each content bean
+		for (LtiContentBean contentBean : contentBeans) {
+			String plstr = contentBean.getPlacement();
 			ToolConfiguration tool = SiteService.findTool(plstr);
 			if (tool == null) {
-				content.put(LTIService.LTI_PLACEMENT, null);
+				// TODO: Review this closely
+				// Note: Invalid placement detected - tool configuration not found
+				// The setPlacement() method already exists in LtiContentBean (via Lombok)
+				// but we're just validating here, not fixing invalid placements
 			}
 		}
-		context.put("contents", contents);
+		
+		// Pass Beans directly to template - much more efficient and type-safe!
+		context.put("contents", contentBeans);
 		context.put("messageSuccess", state.getAttribute(STATE_SUCCESS));
-		context.put("isAdmin", new Boolean(ltiService.isAdmin(getSiteId(state))));
+		context.put("isAdmin", Boolean.valueOf(ltiService.isAdmin(getSiteId(state))));
 		context.put("getContext", toolManager.getCurrentPlacement().getContext());
 		state.removeAttribute(STATE_SUCCESS);
 		return "lti_content";
@@ -1656,17 +1741,18 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 	public List<Map<String, Object>> getAvailableTools (String ourSite, String contextString) {
 
 		Boolean isAdmin = ltiService.isAdmin(ourSite);
-		List<Map<String, Object>> tools = null;
+		List<LtiToolBean> toolBeans = null;
 		if ( isAdmin ) {
-			tools = ltiService.getTools(null, null, 0, 0, ourSite);
+			toolBeans = ltiService.getToolsAsBeans(null, null, 0, 0, ourSite);
 		} else {
-			tools = ltiService.getToolsLaunch(ourSite);
+			toolBeans = ltiService.getToolsLaunchAsBeans(ourSite);
 		}
 
 		// only list the tools available in the system
 		List<Map<String, Object>> systemTools = new ArrayList<Map<String, Object>>();
-		for (Map<String, Object> tool : tools) {
-			String siteId = !tool.containsKey(ltiService.LTI_SITE_ID) ? null : StringUtils.trimToNull((String) tool.get(ltiService.LTI_SITE_ID));
+		for (LtiToolBean toolBean : toolBeans) {
+			Map<String, Object> tool = toolBean.asMap();
+			String siteId = StringUtils.trimToNull(toolBean.getSiteId());
 			if (siteId == null) {
 				// add tool for whole system
 				systemTools.add(tool);
@@ -1677,11 +1763,41 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 				// if in Admin's my workspace, show all tools
 				systemTools.add(tool);
 			}
-		}
-		systemTools = systemTools.stream().sorted((m1, m2) -> String.valueOf(m1.get("title")).compareTo(String.valueOf(m2.get("title")))).collect(Collectors.toList());
-		return systemTools;
-
 	}
+	systemTools = systemTools.stream().sorted((m1, m2) -> String.valueOf(m1.get("title")).compareTo(String.valueOf(m2.get("title")))).collect(Collectors.toList());
+	return systemTools;
+
+}
+
+public List<LtiToolBean> getAvailableToolsAsBeans(String ourSite, String contextString) {
+
+	Boolean isAdmin = ltiService.isAdmin(ourSite);
+	List<LtiToolBean> toolBeans = null;
+	if ( isAdmin ) {
+		toolBeans = ltiService.getToolsAsBeans(null, null, 0, 0, ourSite);
+	} else {
+		toolBeans = ltiService.getToolsLaunchAsBeans(ourSite);
+	}
+
+	// only list the tools available in the system
+	List<LtiToolBean> systemToolBeans = new ArrayList<>();
+	for (LtiToolBean toolBean : toolBeans) {
+		String siteId = StringUtils.trimToNull(toolBean.getSiteId());
+		if (siteId == null) {
+			// add tool for whole system
+			systemToolBeans.add(toolBean);
+		} else if (siteId.equals(contextString)) {
+			// add the tool for current site only
+			systemToolBeans.add(toolBean);
+		} else if (ltiService.isAdmin(ourSite)) {
+			// if in Admin's my workspace, show all tools
+			systemToolBeans.add(toolBean);
+		}
+	}
+	systemToolBeans = systemToolBeans.stream().sorted(Comparator.comparing(t -> String.valueOf(t.getTitle()))).collect(Collectors.toList());
+	return systemToolBeans;
+
+}
 
 	public String buildContentPutPanelContext(VelocityPortlet portlet, Context context,
 			RunData data, SessionState state) {
@@ -1693,7 +1809,7 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			addAlert(state, rb.getString("error.maintain.edit"));
 			return "lti_error";
 		}
-		context.put("isAdmin", new Boolean(ltiService.isAdmin(getSiteId(state))));
+		context.put("isAdmin", Boolean.valueOf(ltiService.isAdmin(getSiteId(state))));
 		context.put("doAction", BUTTON + "doContentPut");
 		state.removeAttribute(STATE_SUCCESS);
 
@@ -1712,7 +1828,7 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		Long key = null;
 		if (toolId != null) {
 			try {
-				key = new Long(toolId);
+				key = Long.valueOf(toolId);
 			} catch (NumberFormatException e) {
 				//Reset toolId and key
 				key = null;
@@ -1742,7 +1858,7 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			// Edit
 		} else {
 			context.put("oldContentId", contentId);
-			Long contentKey = new Long(contentId);
+			Long contentKey = Long.valueOf(contentId);
 			Map<String, Object> content = ltiService.getContent(contentKey, getSiteId(state));
 			if (content == null) {
 				addAlert(state, rb.getString("error.content.not.found"));
@@ -1866,7 +1982,7 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		} else {
 			// the return value is the content key Long value
 			id = ((Long) retval).toString();
-			contentKey = new Long(id);
+			contentKey = Long.valueOf(id);
 			content = ltiService.getContent(contentKey, getSiteId(state));
 			if (content == null) {
 				addAlert(state, rb.getString("error.content.not.found"));
@@ -1907,7 +2023,7 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 
 			SakaiLineItem sakaiLineItem = (SakaiLineItem) state.getAttribute(STATE_LINE_ITEM);
 			state.removeAttribute(STATE_LINE_ITEM);
-			Long toolKey = new Long(toolId);
+			Long toolKey = Long.valueOf(toolId);
 			handleLineItem(state, sakaiLineItem, toolKey, content);
 
 			//Append the LTI item description to the URL so Lessons can use it.
@@ -2565,7 +2681,7 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		log.debug("Forwarding to {}", forward);
 		state.setAttribute(STATE_CONTENT_ITEM, new_content);
 		state.setAttribute(STATE_CONTENT_ITEM_FAILURES, failures);
-		state.setAttribute(STATE_CONTENT_ITEM_SUCCESSES, new Integer(goodcount));
+		state.setAttribute(STATE_CONTENT_ITEM_SUCCESSES, Integer.valueOf(goodcount));
 
 		if (sakaiSession == null) {
 			switchPanel(state, forward);
@@ -2996,7 +3112,7 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		// SAK-47867 - If both are set, prefer DeepLink / Content Item
 		if ( allowLinkSelection > 0 ) allowLaunch = 0L;
 
-		context.put("isAdmin", new Boolean(ltiService.isAdmin(getSiteId(state))));
+		context.put("isAdmin", Boolean.valueOf(ltiService.isAdmin(getSiteId(state))));
 		context.put("doAction", BUTTON + "doContentPut");
 		// Assignment flow does not want a cancel button - just close the modal
 		if (!FLOW_PARAMETER_ASSIGNMENT.equals(flow) && !returnUrl.startsWith("about:blank")) {
@@ -3194,6 +3310,9 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		// If at this point, we are not down to a single tool - give the user the list to select from
 		// And then come back through this logic
 		if (tool == null) {
+			// TODO: Convert to Bean usage when working on Assignment and Lessons flows
+			// This requires adding Bean versions of getToolsAssessmentSelection(), getToolsContentEditor(), 
+			// and getToolsLessonsSelection() to LTIService, plus thorough testing of all flow paths
 			context.put("allTools", allTools);
 			context.put("returnUrl", Base64DoubleUrlEncodeSafe.encode(returnUrl));
 			context.put("flow", flow);
@@ -3387,7 +3506,7 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			return "lti_content_redirect";
 		} else if ( flow.equals(FLOW_PARAMETER_EDITOR) ) {
 			context.put("new_content", new_content);
-			context.put("goodcount", new Integer(1));
+			context.put("goodcount", Integer.valueOf(1));
 			return "lti_editor_done";
 		} else {
 			log.warn("Unhandled flow type {}", flow);
@@ -3447,19 +3566,13 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			addAlert(state, rb.getString("error.id.not.found"));
 			return "lti_tool_system";
 		}
-		Long key = new Long(id);
-		Map<String, Object> content = ltiService.getContent(key, getSiteId(state));
+		Long key = Long.valueOf(id);
+		org.sakaiproject.lti.beans.LtiContentBean content = ltiService.getContentBean(key, getSiteId(state));
 		if (content == null) {
 			addAlert(state, rb.getString("error.content.not.found"));
 			return "lti_tool_system";
 		}
-		Long tool_id_long = null;
-		try {
-			tool_id_long = new Long(content.get(LTIService.LTI_TOOL_ID).toString());
-		} catch (Exception e) {
-			// log the error
-			log.error("error parsing tool id {}", content.get(LTIService.LTI_TOOL_ID));
-		}
+		Long tool_id_long = content.toolId;
 		context.put("tool_id_long", tool_id_long);
 		context.put("content", content);
 		context.put("ltiService", ltiService);
@@ -3486,7 +3599,7 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			switchPanel(state, "ToolSite");
 			return;
 		}
-		Long key = new Long(id);
+		Long key = Long.valueOf(id);
 		// also remove the link
 		if (ltiService.deleteContent(key, getSiteId(state))) {
 			state.setAttribute(STATE_SUCCESS, rb.getString("success.deleted"));
@@ -3515,8 +3628,8 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			addAlert(state, rb.getString("error.id.not.found"));
 			return "lti_tool_system";
 		}
-		Long key = new Long(id);
-		Map<String, Object> content = ltiService.getContent(key, getSiteId(state));
+		Long key = Long.valueOf(id);
+		org.sakaiproject.lti.beans.LtiContentBean content = ltiService.getContentBean(key, getSiteId(state));
 		if (content == null) {
 			addAlert(state, rb.getString("error.content.not.found"));
 			return "lti_tool_system";
@@ -3568,8 +3681,8 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 			addAlert(state, rb.getString("error.id.not.found"));
 			return "lti_error";
 		}
-		Long key = new Long(id);
-		Map<String, Object> content = ltiService.getContent(key, getSiteId(state));
+		Long key = Long.valueOf(id);
+		org.sakaiproject.lti.beans.LtiContentBean content = ltiService.getContentBean(key, getSiteId(state));
 		if (content == null) {
 			addAlert(state, rb.getString("error.content.not.found"));
 			return "lti_error";
@@ -3584,10 +3697,17 @@ public class LTIAdminTool extends VelocityPortletPaneledAction {
 		SessionState state = ((JetspeedRunData) data).getPortletSessionState(peid);
 
 		String id = data.getParameters().getString(LTIService.LTI_ID);
-		Long key = id == null ? null : new Long(id);
+        Long key = null;
+        try {
+            key = id == null ? null : Long.valueOf(id);
+        } catch (NumberFormatException nfe) {
+            addAlert(state, rb.getString("error.id.not.found"));
+            switchPanel(state, "Error");
+            return;
+        }
 
-		String rv = ltiService.deleteContentLink(key, getSiteId(state));
-		if (rv != null) {
+        String rv = ltiService.deleteContentLink(key, getSiteId(state));
+        if (rv != null) {
 			// there is error removing the external tool site link
 			addAlert(state, rv);
 			switchPanel(state, "Error");
